# data-providers

./: .travis.yml  README.rst  pyproject.toml  setup.py
data_providers/: __init__.py  aggregator.py  data_structures.py  delegate.py  exceptions.py  testing.py
docs/: Makefile  conf.py  index.rst  make.bat
test/: test_aggregator.py  test_data_provider.py  test_data_structures.py  test_delegate.py  test_impl.py  test_testing.py
test/data_providers/: aggregator_test.py  data_structures_test.py  delegate_test.py  impl_test.py  testing_test.py
